# 5_task_compiler

./: README.md
task5_1/: CMakeLists.txt  README.md
task5_1/include/: graph.hpp  loops.hpp  union_find.hpp
task5_1/src/: graph.cpp  loops.cpp  main.cpp
task5_2/: CMakeLists.txt  README.md
task5_2/include/: graph.hpp  ssa.hpp
task5_2/src/: graph.cpp  main.cpp  ssa.cpp
